# dawn

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml  release.yml
examples/: showcase.md  technical.md
libai/: Makefile  bridge.swift
src/: dawn.c  dawn.h  dawn_app.h  dawn_args.c  dawn_args.h  dawn_backend.c  dawn_backend.h  dawn_backend_posix.c  dawn_backend_web.c  dawn_block.c  dawn_block.h  dawn_chat.c  dawn_chat.h  dawn_clipboard.c  dawn_clipboard.h  dawn_date.c  dawn_date.h  dawn_file.c  dawn_file.h  dawn_fm.c  dawn_fm.h  dawn_footnote.c  dawn_footnote.h  dawn_gap.c  dawn_gap.h  dawn_highlight.c  dawn_highlight.h  dawn_history.c  dawn_history.h  dawn_image.c  dawn_image.h  dawn_input.c  dawn_input.h  dawn_md.c  dawn_md.h  dawn_modal.c  dawn_modal.h  dawn_nav.c  dawn_nav.h  dawn_render.c  (+32 more)
src/highlight/: highlight.c  highlight.h  themes.c
src/highlight/lang/: asm.c  bash.c  bf.c  c.c  csharp.c  css.c  csv.c  diff.c  docker.c  git.c  go.c  html.c  http.c  ini.c  java.c  js.c  js_template.c  jsdoc.c  json.c  leanpub_md.c  log.c  lua.c  make.c  md.c  perl.c  plain.c  py.c  regex.c  rust.c  sql.c  todo.c  toml.c  ts.c  uri.c  xml.c  yaml.c
tools/: generate_emoji_header.sh  generate_entities_header.sh
